--- a/Customer/src/main/resources/templates/index.html
+++ b/Customer/src/main/resources/templates/index.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="why-text">
                             <h4 th:text="${product.name}"></h4>
-                            <h5 th:text="'$' + ${product.costPrice}"></h5>
+                            <h5 th:text="${product.costPrice} + 'đ'"></h5>
                         </div>
                     </div>
                 </form>
@@ -83,7 +83,6 @@
 
 
 <!-- Start Feed  -->
-<div th:replace="~{fragments::instagram-box}"></div>
 
 <!-- End Feed  -->
 
