--- a/Customer/src/main/resources/templates/fragments.html
+++ b/Customer/src/main/resources/templates/fragments.html
@@ -63,28 +63,16 @@
                     <div id="offer-box" class="carouselTicker">
                         <ul class="offer-box">
                             <li>
-                                <i class="fab fa-opencart"></i> Off 5% for new members
+                                <i class="fab fa-opencart"></i> Giảm 5% cho người mới
                             </li>
                             <li>
                                 <i class="fab fa-opencart"></i> Freeship
                             </li>
                             <li>
-                                <i class="fab fa-opencart"></i> 10% off Entire Purchase Promo code: OceanPrime
-                            </li>
-                            <li>
-                                <i class="fab fa-opencart"></i> Off upto 10%! Shop Now
-                            </li>
-                            <li>
-                                <i class="fab fa-opencart"></i> Off 5% for new members
+                                <i class="fab fa-opencart"></i> Giảm 5% cho người mới
                             </li>
                             <li>
                                 <i class="fab fa-opencart"></i> Freeship
-                            </li>
-                            <li>
-                                <i class="fab fa-opencart"></i> 10% off Entire Purchase Promo code: OceanPrime
-                            </li>
-                            <li>
-                                <i class="fab fa-opencart"></i> Off 10%! Shop Now
                             </li>
                         </ul>
                     </div>
@@ -125,7 +113,7 @@
                             <li><a th:href="@{/profile}">My Account</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item active"><a class="nav-link" th:href="@{/contact}">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/contact}">Contact Us</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -169,7 +157,7 @@
             <div class="col-lg-12">
                 <h2 th:text="${page}"></h2>
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="home.html">Ocean Prime</a></li>
+                    <li class="breadcrumb-item"><a href="/shop/">Hello Summer</a></li>
                     <li class="breadcrumb-item active" th:text="${page}"></li>
                 </ul>
             </div>
@@ -253,7 +241,7 @@
                 <div class="col-lg-4 col-md-12 col-sm-12">
                     <div class="footer-top-box">
                         <h3>Social Media</h3>
-                        <p>Come with Ocean Prime shop - Only Fresh </p>
+                        <p>Hãy đến với Hello Summer Juice Bar - Chỉ có sự tươi mát</p>
                         <ul>
                             <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
