--- a/Customer/src/main/resources/templates/home.html
+++ b/Customer/src/main/resources/templates/home.html
@@ -28,8 +28,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="m-b-20"><strong>Welcome To <br> Ocean Prime Seafoods</strong></h1>
-                        <p class="m-b-40">Enjoy your meal! <br> Have you a good, fun working day and delicious meal!</p>
+                        <h1 class="m-b-20"><strong>Chúng Tôi Là<br>HELLO SUMMER JUICE BAR</strong></h1>
+                        <p class="m-b-40">Thưởng thức ly nước ép tươi mát!<br>Chúc bạn có một ngày làm việc vui vẻ và trải nghiệm những hương vị tuyệt vời từ ly nước ép của chúng tôi!</p>
                     </div>
                 </div>
             </div>
@@ -39,8 +39,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="m-b-20"><strong>Welcome To <br> Ocean Prime Seafoods</strong></h1>
-                        <p class="m-b-40">Enjoy your meal! <br> Have you a good, fun working day and delicious meal!</p>
+                        <h1 class="m-b-20"><strong>Chúng Tôi Là<br>HELLO SUMMER JUICE BAR</strong></h1>
+                        <p class="m-b-40">Thưởng thức ly nước ép tươi mát!<br>Chúc bạn có một ngày làm việc vui vẻ và trải nghiệm những hương vị tuyệt vời từ ly nước ép của chúng tôi!</p>
                     </div>
                 </div>
             </div>
@@ -51,8 +51,8 @@
                 <div class="row">
                     <div class="col-md-12">
 
-                        <h1 class="m-b-20"><strong>Welcome To <br> Ocean Prime Seafoods</strong></h1>
-                        <p class="m-b-40">Enjoy your meal! <br> Have you a good, fun working day and delicious meal!</p>
+                        <h1 class="m-b-20"><strong>Chúng Tôi Là<br>HELLO SUMMER JUICE BAR</strong></h1>
+                        <p class="m-b-40">Thưởng thức ly nước ép tươi mát!<br>Chúc bạn có một ngày làm việc vui vẻ và trải nghiệm những hương vị tuyệt vời từ ly nước ép của chúng tôi!</p>
                     </div>
                 </div>
             </div>
@@ -75,18 +75,18 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <h2 class="noo-sh-title-top">We are <span>Ocean Prime Seafoods</span></h2>
-                <p>Seafood is our only business. Having spent many years in the seafood business, we know where to find
-                    the best products.
-                    Ocean Prime Seafoods deals only with high-end processors and reliable importers. We handle quality
-                    products that
-                    we would serve to our friends and family. If it is good enough for our table, you will want it on
-                    yours!</p>
-                <p>At Ocean Prime, you can choose the best of both. Here, guests are invited on an adventure in great
-                    food. We will create a great experience for you.</p>
-                <p>Our menu is both classic and modern featuring lighter items to indulgent seafood presentations like
-                    crab, shrimp, lobster,...
-                    We deliver more than just incredible food: We create remarkable experiences.</p>
+                <h2 class="noo-sh-title-top">CHÚNG TÔI LÀ HELLO SUMMER JUICE BAR</h2>
+                <p>Nước ép hoa quả là lĩnh vực kinh doanh duy nhất của chúng tôi
+                    . Với nhiều năm kinh nghiệm trong ngành, chúng tôi biết nơi để tìm ra những sản phẩm tốt nhất
+                    . Hello Summer Juice Bar chỉ làm việc với những nhà sản xuất hàng đầu và nhà nhập khẩu đáng tin cậy
+                    . Chúng tôi chỉ sử dụng những sản phẩm chất lượng cao mà chúng tôi sẽ phục vụ cho bạn bè và gia đình. Nếu nó đủ tốt cho bàn ăn của chúng tôi, bạn sẽ muốn nó trên bàn của bạn!</p>
+                <p>Tại Hello Summer, bạn có thể chọn những gì tốt nhất từ cả hai thế
+                    . Ở đây, khách hàng được mời vào một cuộc phiêu lưu ẩm thực tuyệt vời
+                    . Chúng tôi sẽ tạo ra một trải nghiệm tuyệt vời cho bạn.</p>
+                <p>Menu của chúng tôi vừa mang tính cổ điển vừa
+                    hiện đại với các món từ nhẹ nhàng đến những sự kết hợp hoa
+                    quả phong phú như dâu, cam, xoài, táo,... Chúng tôi mang đến nhiều hơn là
+                    chỉ thực phẩm tuyệt vời: Chúng tôi tạo ra những trải nghiệm đáng nhớ.</p>
                 <a class="btn hvr-hover" href="#">Read More</a>
             </div>
         </div>
@@ -94,25 +94,26 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="service-block-inner">
                     <h3>We are Trusted</h3>
-                    <p>Lorem Ocean Prime Seafoods deals only with high-end processors and reliable importers.
-                        We handle quality products that we would serve to our friends and family. </p>
+                    <p>Hello Summer Juice Bar chỉ làm việc với những nhà sản xuất hàng đầu và nhà nhập khẩu đáng tin cậy
+                        . Chúng tôi chỉ sử dụng những sản phẩm chất lượng cao mà chúng tôi sẽ phục vụ cho bạn bè và gia đình.</p>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4">
                 <div class="service-block-inner">
                     <h3>We are Professional</h3>
-                    <p>Here, guests are invited on an adventure in great food. We will create a great experience for
-                        you.
-                        We deliver more than just incredible food: We create remarkable experiences.
+                    <p>Tại đây, khách hàng được mời vào một cuộc phiêu lưu với những loại nước ép tuyệt vời
+                        . Chúng tôi sẽ tạo ra một trải nghiệm tuyệt vời cho bạn
+                        . Chúng tôi mang đến nhiều hơn là chỉ những loại nước ép tuyệt hảo: Chúng tôi tạo ra những trải nghiệm đáng nhớ.
                     </p>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-4">
                 <div class="service-block-inner">
                     <h3>We are Expert</h3>
-                    <p>We Have spent many years in the seafood business, we know where to find the best products.
-                        Our menu is both classic and modern featuring lighter items to indulgent seafood presentations
-                        like crab, shrimp, lobster,... </p>
+                    <p>Chúng tôi đã dành nhiều năm trong ngành nước ép hoa quả
+                        , và chúng tôi biết nơi để tìm ra những sản phẩm tốt nhất
+                        . Menu của chúng tôi vừa mang tính cổ điển vừa hiện đại với các món từ nhẹ
+                        nhàng đến những sự kết hợp hoa quả phong phú như dâu, cam, xoài, táo,...</p>
                 </div>
             </div>
         </div>
@@ -121,8 +122,6 @@
 
 
 <!-- Start Feed  -->
-<div th:replace="~{fragments::instagram-box}">
-</div>
 
 <!-- End Feed  -->
 
