--- a/Customer/src/main/resources/templates/shop-detail.html
+++ b/Customer/src/main/resources/templates/shop-detail.html
@@ -96,7 +96,7 @@
                                                 </div>
                                                 <div class="why-text">
                                                     <h4 th:text="${product.name}"></h4>
-                                                    <h5 th:text="'$' + ${product.costPrice}"></h5>
+                                                    <h5 th:text="${product.costPrice} + ' đ'"></h5>
                                                 </div>
                                             </div>
                                         </form>
@@ -119,7 +119,7 @@
                                             <div class="col-sm-6 col-md-6 col-lg-8 col-xl-8">
                                                 <div class="why-text full-width">
                                                     <h4 th:text="${productView.name}"></h4>
-                                                    <h5 th:text="'$' + ${productView.costPrice}"></h5>
+                                                    <h5 th:text="${productView.costPrice} + 'đ'"></h5>
                                                     <p th:text="${productView.description}"></p>
                                                     <input type="hidden" th:value="${productView.id}" name="id"
                                                            class="form-control">
@@ -167,9 +167,6 @@
 <!-- End Shop Page -->
 
 <!-- Start Feed  -->
-<div th:replace="~{fragments::instagram-box}">
-
-</div>
 
 <!-- End Feed  -->
 
