--- a/Customer/src/main/resources/templates/cart.html
+++ b/Customer/src/main/resources/templates/cart.html
@@ -65,7 +65,7 @@
                                 <p th:text="${cartItem.product.name}"></p>
                             </td>
                             <td class="price-pr">
-                                <p th:text="'$' + ${cartItem.unitPrice}"></p>
+                                <p th:text="${cartItem.unitPrice} + 'đ'"></p>
                             </td>
                             <form th:action="@{/update-cart}" method="post">
                                 <input type = "hidden" name = "id" th:value = "${cartItem.product.id}" >
@@ -75,7 +75,7 @@
                                            class="c-input-text qty text">
                                 </td>
                                 <td class="total-pr">
-                                    <p th:text="'$' + ${cartItem.unitPrice * cartItem.quantity}"></p>
+                                    <p th:text="${cartItem.unitPrice * cartItem.quantity} + 'đ'"></p>
                                 </td>
                                 <td>
                                     <button type="submit" name="action" value="update" title="Update"
@@ -107,7 +107,7 @@
                     <hr class="my-1">
                     <div class="d-flex">
                         <h4>Tax</h4>
-                        <div class="ml-auto font-weight-bold"> $0.2</div>
+                        <div class="ml-auto font-weight-bold"> 1000đ</div>
                     </div>
                     <div class="d-flex">
                         <h4>Shipping Cost</h4>
@@ -116,7 +116,7 @@
                     <hr>
                     <div class="d-flex gr-total">
                         <h5>Grand Total</h5>
-                        <div class="ml-auto h5" th:text="'$' + ${grandTotal + 0.2}"></div>
+                        <div class="ml-auto h5" th:text="${grandTotal + 1000} + 'đ'"></div>
                     </div>
                     <hr>
                 </div>
