--- a/Customer/src/main/resources/templates/checkout.html
+++ b/Customer/src/main/resources/templates/checkout.html
@@ -87,10 +87,10 @@
                                 <div class="media mb-2 border-bottom" th:each="item : ${shoppingCart.getCartItems()}">
                                     <div class="media-body"><a href="product-detail.html"
                                                                th:text="${item.product.name}"></a>
-                                        <div class="small text-muted">Price: [(${item.product.costPrice})]$ <span
+                                        <div class="small text-muted">Price: [(${item.product.costPrice})]đ <span
                                                 class="mx-2">|</span> Qty: [(${item.quantity})]
-                                            <span class="mx-2">|</span> Subtotal: $ + [(${item.unitPrice *
-                                            item.quantity})]
+                                            <span class="mx-2">|</span> Subtotal: [(${item.unitPrice *
+                                            item.quantity})]đ
                                         </div>
                                     </div>
                                 </div>
@@ -114,7 +114,7 @@
                             <hr class="my-1">
                             <div class="d-flex">
                                 <h4>Tax</h4>
-                                <div class="ml-auto font-weight-bold"> $2</div>
+                                <div class="ml-auto font-weight-bold"> 1000đ</div>
                             </div>
                             <div class="d-flex">
                                 <h4>Shipping Cost</h4>
@@ -123,7 +123,7 @@
                             <hr>
                             <div class="d-flex gr-total">
                                 <h5>Grand Total</h5>
-                                <div class="ml-auto h5" th:text="${shoppingCart.totalPrice + 2}"></div>
+                                <div class="ml-auto h5" th:text="${shoppingCart.totalPrice + 1000} + 'đ'"></div>
                             </div>
                             <hr>
                         </div>
