--- a/Customer/src/main/resources/templates/contact-us.html
+++ b/Customer/src/main/resources/templates/contact-us.html
@@ -39,8 +39,8 @@
             <div class="col-lg-4 col-sm-12">
                 <div class="contact-info-left">
                     <h2>CONTACT US</h2>
-                    <p>Please send a message or call us if you want to comment on our food or you feel that our food
-                        has problems.</p>
+                    <p>Vui lòng gửi tin nhắn hoặc gọi điện cho chúng tôi nếu bạn có ý kiến
+                        về các loại nước ép của chúng tôi hoặc cảm thấy có vấn đề về chất lượng.</p>
                     <ul>
                         <li>
                             <p><i class="fas fa-map-marker-alt"></i>Address: Co So 3 Van Lang
